--- a/package.json
+++ b/package.json
@@ -11,12 +11,20 @@
     "seed": "node ./scripts/seed.js"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
+    "@mui/icons-material": "^5.14.18",
+    "@mui/material": "^5.14.18",
+    "@mui/x-date-pickers": "^6.18.1",
     "aws4": "^1.12.0",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.3.1",
     "flowbite": "^2.1.1",
     "flowbite-react": "^0.6.4",
+    "js-cookie": "^3.0.5",
+    "material-react-table": "^2.0.4",
     "mongodb": "^6.2.0",
     "mongoose": "^7.0.1",
     "next": "14.0.2",
@@ -28,6 +36,7 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
