feat(quoter): update quoter creation with new product and extra handling, enhance API for fetching quoters

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.11.0",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
+    "@heroui/react": "^2.7.6",
     "@mui/icons-material": "^5.14.18",
     "@mui/material": "^5.14.18",
     "@mui/x-date-pickers": "^6.18.1",
@@ -23,6 +24,7 @@
     "dotenv": "^16.3.1",
     "flowbite": "^2.1.1",
     "flowbite-react": "^0.6.4",
+    "framer-motion": "^11.9.0",
     "js-cookie": "^3.0.5",
     "material-react-table": "^2.0.4",
     "mongodb": "^6.2.0",
